--- a/.env.example
+++ b/.env.example
@@ -73,6 +73,7 @@ LOCAL_USER_CRYPTO_ADDRESS="0x0000000000000000000000000000000000000000"
 NEXT_PUBLIC_LOG_LEVEL="info" # debug | info | warn | error | custom
 
 SUPPRESS_SENTRY_ERRORS_ON_LOCAL="true"
+DISABLE_SENTRY_SOURCEMAPS="true"
 
 # Whether to bypass the geo gate check on local development
 NEXT_PUBLIC_BYPASS_GEO_GATE="true"
