--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -51,6 +51,7 @@ jobs:
       SENDGRID_SENDER_GB: ${{vars.SENDGRID_SENDER_GB}}
       SENDGRID_WEBHOOK_VERIFICATION_KEY: ${{secrets.SENDGRID_WEBHOOK_VERIFICATION_KEY}}
       NEXT_PUBLIC_SENTRY_DSN: ${{vars.NEXT_PUBLIC_SENTRY_DSN}}
+      DISABLE_SENTRY_SOURCEMAPS: ${{vars.DISABLE_SENTRY_SOURCEMAPS}}
       NEXT_PUBLIC_THIRDWEB_AUTH_DOMAIN: ${{vars.NEXT_PUBLIC_THIRDWEB_AUTH_DOMAIN}}
       NEXT_PUBLIC_THIRDWEB_CLIENT_ID: ${{vars.NEXT_PUBLIC_THIRDWEB_CLIENT_ID}}
       TWILIO_ACCOUNT_SID: ${{vars.TWILIO_ACCOUNT_SID}}
