feat: add speed insights sample rate as an env var

--- a/.env.example
+++ b/.env.example
@@ -187,6 +187,8 @@ NEXT_PUBLIC_GOOGLE_TAG_MANAGER_ID='GTM-'
 NEXT_PUBLIC_AU_TWITTER_EVENT_ID=''
 NEXT_PUBLIC_AU_LINKEDIN_PARTNER_ID=''
 
+NEXT_PUBLIC_SPEED_INSIGHTS_SAMPLE_RATE="0.2"
+
 # Quorum API Credentials
 QUORUM_API_KEY=
 QUORUM_API_USERNAME=
