--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -73,6 +73,7 @@ jobs:
       LEGACY_NFT_DEPLOYER_WALLET: ${{vars.LEGACY_NFT_DEPLOYER_WALLET}}
       I_AM_A_VOTER_NFT_CONTRACT_ADDRESS: ${{ vars.I_AM_A_VOTER_NFT_CONTRACT_ADDRESS }}
       NEXT_PUBLIC_BUILDER_IO_PUBLIC_KEY: ${{vars.NEXT_PUBLIC_BUILDER_IO_PUBLIC_KEY}}
+      NEXT_PUBLIC_SPEED_INSIGHTS_SAMPLE_RATE: 0
 
     steps:
       - name: Checkout code
