feat: add EU support for email templates and internationalization
- Introduced EU-specific email templates for initial sign-up, follow-up reminders, and phone number reminders.
- Enhanced the KeepUpTheFightSection component to support multiple languages and dynamic translations.
- Updated the .env.example file to include SENDGRID_SENDER_EU for email configuration.
- Improved internationalization by adding EU-related display names and translations in the i18n commons.

--- a/.env.example
+++ b/.env.example
@@ -39,8 +39,8 @@ SENDGRID_SENDER_US=
 SENDGRID_SENDER_GB=
 SENDGRID_SENDER_CA=
 SENDGRID_SENDER_AU=
+SENDGRID_SENDER_EU=
 SENDGRID_WEBHOOK_VERIFICATION_KEY=
-
 # If you are not a core contributor, you should use docker compose and leave this as is
 # If you are a core contributor you can use SWC PlanetScale, for that follow the steps below:
 # - Request access to the Stand With Crypto PlanetScale account (reach out to a core contributor for an invitation).
