--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "audit": "concurrently \"npm run lint:cypress --max-warnings=0 --fix\" \"next lint --max-warnings=0 --fix\"  \"prettier --log-level silent --write .\" \"npm run typecheck\" \"npm run test -- -u\"",
+    "audit": "concurrently \"npm run lint:cypress --fix\" \"eslint . --ext .ts,.tsx --fix\"  \"prettier --log-level silent --write .\" \"npm run typecheck\" \"npm run test -- -u\"",
     "build": "CI_OVERRIDES=true next build",
     "build-storybook": "storybook build",
     "codegen": "graphql-codegen --config codegen.ts",
@@ -21,8 +21,8 @@
     "email:dev": "email dev --dir \"src/utils/server/email/templates\" --port 3333",
     "initial": "npm run db:generate && npm run codegen && npm run db:seed",
     "inngest": "npx inngest-cli@latest dev --no-discovery -u http://localhost:3000/api/inngest",
-    "lint": "concurrently \"next lint --max-warnings=0\"  \"prettier --check .\"",
-    "lint:fix": "concurrently \"next lint --max-warnings=0 --fix\"  \"prettier --check . --write\"",
+    "lint": "concurrently \"eslint . --ext .ts,.tsx\"  \"prettier --check .\"",
+    "lint:fix": "concurrently \"eslint . --ext .ts,.tsx --fix\"  \"prettier --write .\"",
     "lint:cypress": "eslint ./cypress",
     "newbranch": "npm i && npm run db:generate && npm run codegen",
     "postbuild": "next-sitemap",
@@ -44,8 +44,8 @@
     "@hookform/resolvers": "^3.3.2",
     "@inngest/middleware-sentry": "^0.1.1",
     "@neondatabase/serverless": "^0.10.4",
-    "@next/bundle-analyzer": "^15.1.6",
-    "@next/third-parties": "^15.1.6",
+    "@next/bundle-analyzer": "^16.0.0",
+    "@next/third-parties": "^16.0.0",
     "@planetscale/database": "^1.16.0",
     "@prisma/adapter-neon": "^5.22.0",
     "@prisma/adapter-planetscale": "^5.10.2",
@@ -71,8 +71,8 @@
     "@react-google-maps/api": "^2.20.3",
     "@sendgrid/eventwebhook": "^8.0.0",
     "@sendgrid/mail": "^8.1.3",
-    "@sentry/nextjs": "^8.41.0",
-    "@sentry/types": "^8.41.0",
+    "@sentry/nextjs": "^10.22.0",
+    "@sentry/types": "^10.22.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tanstack/react-table": "^8.20.6",
     "@thirdweb-dev/engine": "^0.0.4",
@@ -107,7 +107,7 @@
     "mixpanel-browser": "^2.48.1",
     "motion": "^12.0.0-alpha.2",
     "nanoid": "^5.0.5",
-    "next": "^15.1.6",
+    "next": "^16.0.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.12",
@@ -142,6 +142,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@faker-js/faker": "^8.3.1",
     "@formatjs/cli": "^6.2.4",
     "@graphql-codegen/cli": "5.0.0",
@@ -183,14 +184,14 @@
     "autoprefixer": "^10.0.1",
     "concurrently": "^8.2.2",
     "cypress": "^13.6.6",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^15.0.3",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^16.0.0",
     "eslint-plugin-cypress": "^3.6.0",
-    "eslint-plugin-formatjs": "^4.11.3",
+    "eslint-plugin-formatjs": "^5.4.2",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-no-relative-import-paths": "^1.5.3",
     "eslint-plugin-simple-import-sort": "^11.0.0",
-    "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-storybook": "^0.11.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ogr2ogr": "^6.0.0",
