--- a/package.json
+++ b/package.json
@@ -152,15 +152,8 @@
     "@graphql-codegen/near-operation-file-preset": "^3.0.0",
     "@graphql-codegen/schema-ast": "^4.0.0",
     "@graphql-codegen/typescript-resolvers": "^4.0.1",
-    "@storybook/addon-essentials": "^8.0.6",
-    "@storybook/addon-interactions": "^8.0.6",
-    "@storybook/addon-links": "^8.0.6",
-    "@storybook/addon-onboarding": "^8.0.6",
-    "@storybook/addon-styling-webpack": "^1.0.0",
-    "@storybook/blocks": "^8.0.6",
-    "@storybook/nextjs": "^8.0.6",
-    "@storybook/react": "^8.0.6",
-    "@storybook/test": "^8.0.6",
+    "@storybook/addon-onboarding": "^10.0.0",
+    "@storybook/nextjs": "^10.0.0",
     "@tailwindcss/typography": "^0.5.10",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
@@ -178,6 +171,7 @@
     "@types/react-dom": "^19.0.3",
     "@types/react-simple-maps": "^3.0.4",
     "@types/sanitize-html": "^2.9.5",
+    "@types/uuid": "^10.0.0",
     "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
@@ -191,7 +185,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-no-relative-import-paths": "^1.5.3",
     "eslint-plugin-simple-import-sort": "^11.0.0",
-    "eslint-plugin-storybook": "^0.11.1",
+    "eslint-plugin-storybook": "^10.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ogr2ogr": "^6.0.0",
@@ -201,7 +195,7 @@
     "prisma": "^5.11.0",
     "prisma-erd-generator": "^1.11.2",
     "start-server-and-test": "^2.0.3",
-    "storybook": "^8.0.6",
+    "storybook": "^10.0.0",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
