--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "seed": "npm run ts --transpile-only src/bin/seed/seedLocalDb.ts"
   },
   "dependencies": {
+    "@builder.io/admin-sdk": "^0.0.8",
     "@builder.io/react": "^8.0.0",
     "@builder.io/sdk": "^6.0.2",
     "@graphql-tools/mock": "^9.0.0",
